// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workspaces should render a list of projects if there is only one project and it is configured 1`] = `
<div>
  <div
    class="workspaces-root"
  >
    <div
      class="workspaces-base-page-root"
    >
      <div
        class="header-container"
      >
        <a
          class=""
          href="https://liferay.com"
          rel="noreferrer noopener"
          target="_blank"
        >
          <svg
            class="lexicon-icon lexicon-icon-liferay_logo icon-root liferay-logo"
            role="presentation"
          >
            <use
              href="#liferay_logo"
            />
          </svg>
          <span
            class="sr-only"
          >
            (Opens a new window)
          </span>
        </a>
        <div>
          <button
            class="user-menu button-root btn btn-unstyled trigger"
            type="button"
          >
            <div
              class="text-truncate"
            >
              <div
                class="sticker sticker-root sticker-static avatar sticker-circle"
              >
                TT
              </div>
              <span
                class="user-name"
              >
                Test Test
              </span>
              <svg
                class="lexicon-icon lexicon-icon-caret-bottom icon-root caret"
                role="presentation"
              >
                <use
                  href="#caret-bottom"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class="content-container"
        >
          <div
            class="title-container"
          >
            <div
              class="logo-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-ac_logo icon-root logo-icon"
                role="presentation"
              >
                <use
                  href="#ac_logo"
                />
              </svg>
              <span
                class="logo-text"
              >
                Analytics Cloud
              </span>
            </div>
            <h1
              class="title"
            >
              Your Workspaces
            </h1>
            <div
              class="details-container"
            >
              <p>
                Workspaces you have joined
              </p>
            </div>
          </div>
          <div
            class="workspace-list-root"
          >
            <ul
              class="list-group"
            >
              <li
                class="list-group-item list-group-item-action list-group-item-flex"
              >
                <a
                  class="button-root workspace-link border-button btn btn-unstyled"
                  href="/workspace/23"
                >
                  <div
                    class="autofit-col autofit-col-expand"
                  >
                    <div
                      class="col-content-wrapper"
                    >
                      <div
                        class="text-truncate"
                      >
                        <div
                          class="workspace-name"
                        >
                          <span
                            class="text-truncate"
                            data-tooltip="false"
                            title=""
                          >
                            project23
                          </span>
                        </div>
                        <div
                          class="info-wrapper corporation-project-name"
                        >
                          corpProjectName23
                        </div>
                        <div
                          class="workspace-info"
                        >
                          Basic Plan
                        </div>
                      </div>
                      <svg
                        class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                        role="presentation"
                      >
                        <use
                          href="#angle-right-small"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </li>
            </ul>
          </div>
          <div
            class="mt-4"
          >
            <a
              class="button-root btn btn-sm btn-secondary"
              href="/workspace/add/trial"
            >
              Start Free Trial
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Workspaces should render empty state 1`] = `
<div>
  <div
    class="workspaces-root"
  >
    <div
      class="workspaces-base-page-root"
    >
      <div
        class="header-container"
      >
        <a
          class=""
          href="https://liferay.com"
          rel="noreferrer noopener"
          target="_blank"
        >
          <svg
            class="lexicon-icon lexicon-icon-liferay_logo icon-root liferay-logo"
            role="presentation"
          >
            <use
              href="#liferay_logo"
            />
          </svg>
          <span
            class="sr-only"
          >
            (Opens a new window)
          </span>
        </a>
        <div>
          <button
            class="user-menu button-root btn btn-unstyled trigger"
            type="button"
          >
            <div
              class="text-truncate"
            >
              <div
                class="sticker sticker-root sticker-static avatar sticker-circle"
              >
                TT
              </div>
              <span
                class="user-name"
              >
                Test Test
              </span>
              <svg
                class="lexicon-icon lexicon-icon-caret-bottom icon-root caret"
                role="presentation"
              >
                <use
                  href="#caret-bottom"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class="content-container"
        >
          <div
            class="title-container"
          >
            <div
              class="logo-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-ac_logo icon-root logo-icon"
                role="presentation"
              >
                <use
                  href="#ac_logo"
                />
              </svg>
              <span
                class="logo-text"
              >
                Analytics Cloud
              </span>
            </div>
            <h1
              class="title"
            >
              Your Workspaces
            </h1>
            <div
              class="details-container"
            >
              <p>
                You are not a part of any workspaces, let us create a new one.
              </p>
            </div>
          </div>
          <div
            class="empty-container row"
          >
            <div
              class="col-xl-6"
            >
              <div
                class="empty-card"
              >
                <svg
                  class="lexicon-icon lexicon-icon-ac_integration icon-root"
                  role="presentation"
                >
                  <use
                    href="#ac_integration"
                  />
                </svg>
                <p>
                  Do more with our Business & Enterprise Plans
                </p>
                <button
                  class="btn btn-primary"
                  type="button"
                >
                  Contact Sales
                </button>
              </div>
            </div>
            <div
              class="col-xl-6"
            >
              <div
                class="empty-card"
              >
                <svg
                  class="lexicon-icon lexicon-icon-ac_page_analytics icon-root"
                  role="presentation"
                >
                  <use
                    href="#ac_page_analytics"
                  />
                </svg>
                <p>
                  90 Day Full Feature Trial
                </p>
                <a
                  class="btn btn-secondary"
                  href="/workspace/add/trial"
                >
                  Start Free Trial
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Workspaces should render with a message that all basic tier plans have been configured if all of the basic tier plans have been configured and the allBasicConfigured url prop is true 1`] = `
<div>
  <div
    class="workspaces-root"
  >
    <div
      class="workspaces-base-page-root"
    >
      <div
        class="header-container"
      >
        <a
          class=""
          href="https://liferay.com"
          rel="noreferrer noopener"
          target="_blank"
        >
          <svg
            class="lexicon-icon lexicon-icon-liferay_logo icon-root liferay-logo"
            role="presentation"
          >
            <use
              href="#liferay_logo"
            />
          </svg>
          <span
            class="sr-only"
          >
            (Opens a new window)
          </span>
        </a>
        <div>
          <button
            class="user-menu button-root btn btn-unstyled trigger"
            type="button"
          >
            <div
              class="text-truncate"
            >
              <div
                class="sticker sticker-root sticker-static avatar sticker-circle"
              >
                TT
              </div>
              <span
                class="user-name"
              >
                Test Test
              </span>
              <svg
                class="lexicon-icon lexicon-icon-caret-bottom icon-root caret"
                role="presentation"
              >
                <use
                  href="#caret-bottom"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class="content-container"
        >
          <div
            class="title-container"
          >
            <div
              class="logo-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-ac_logo icon-root logo-icon"
                role="presentation"
              >
                <use
                  href="#ac_logo"
                />
              </svg>
              <span
                class="logo-text"
              >
                Analytics Cloud
              </span>
            </div>
            <h1
              class="title"
            >
              Your Workspaces
            </h1>
            <div
              class="details-container"
            >
              <p>
                Workspaces you have joined
              </p>
            </div>
          </div>
          <div
            class="workspace-list-root"
          >
            <ul
              class="list-group"
            >
              <li
                class="list-group-item list-group-item-action list-group-item-flex"
              >
                <a
                  class="button-root workspace-link border-button btn btn-unstyled"
                  href="/workspace/123"
                >
                  <div
                    class="autofit-col autofit-col-expand"
                  >
                    <div
                      class="col-content-wrapper"
                    >
                      <div
                        class="text-truncate"
                      >
                        <div
                          class="workspace-name"
                        >
                          <span
                            class="text-truncate"
                            data-tooltip="false"
                            title=""
                          >
                            project123
                          </span>
                        </div>
                        <div
                          class="info-wrapper corporation-project-name"
                        >
                          corpProjectName123
                        </div>
                        <div
                          class="workspace-info"
                        >
                          Basic Plan
                        </div>
                      </div>
                      <svg
                        class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                        role="presentation"
                      >
                        <use
                          href="#angle-right-small"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </li>
              <li
                class="list-group-item list-group-item-action list-group-item-flex"
              >
                <a
                  class="button-root workspace-link border-button btn btn-unstyled"
                  href="/workspace/124"
                >
                  <div
                    class="autofit-col autofit-col-expand"
                  >
                    <div
                      class="col-content-wrapper"
                    >
                      <div
                        class="text-truncate"
                      >
                        <div
                          class="workspace-name"
                        >
                          <span
                            class="text-truncate"
                            data-tooltip="false"
                            title=""
                          >
                            project124
                          </span>
                        </div>
                        <div
                          class="info-wrapper corporation-project-name"
                        >
                          corpProjectName124
                        </div>
                        <div
                          class="workspace-info"
                        >
                          Basic Plan
                        </div>
                      </div>
                      <svg
                        class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                        role="presentation"
                      >
                        <use
                          href="#angle-right-small"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </li>
            </ul>
          </div>
          <div
            class="mt-4"
          >
            <a
              class="button-root btn btn-sm btn-secondary"
              href="/workspace/add/trial"
            >
              Start Free Trial
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Workspaces should render with a message that one or more basic tier workspaces are available to be configured 1`] = `
<div>
  <div
    class="workspaces-root"
  >
    <div
      class="workspaces-base-page-root"
    >
      <div
        class="header-container"
      >
        <a
          class=""
          href="https://liferay.com"
          rel="noreferrer noopener"
          target="_blank"
        >
          <svg
            class="lexicon-icon lexicon-icon-liferay_logo icon-root liferay-logo"
            role="presentation"
          >
            <use
              href="#liferay_logo"
            />
          </svg>
          <span
            class="sr-only"
          >
            (Opens a new window)
          </span>
        </a>
        <div>
          <button
            class="user-menu button-root btn btn-unstyled trigger"
            type="button"
          >
            <div
              class="text-truncate"
            >
              <div
                class="sticker sticker-root sticker-static avatar sticker-circle"
              >
                TT
              </div>
              <span
                class="user-name"
              >
                Test Test
              </span>
              <svg
                class="lexicon-icon lexicon-icon-caret-bottom icon-root caret"
                role="presentation"
              >
                <use
                  href="#caret-bottom"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class="content-container"
        >
          <div
            class="title-container"
          >
            <div
              class="logo-container"
            >
              <svg
                class="lexicon-icon lexicon-icon-ac_logo icon-root logo-icon"
                role="presentation"
              >
                <use
                  href="#ac_logo"
                />
              </svg>
              <span
                class="logo-text"
              >
                Analytics Cloud
              </span>
            </div>
            <h1
              class="title"
            >
              Your Workspaces
            </h1>
            <div
              class="details-container"
            >
              <p>
                Workspaces you have joined
              </p>
            </div>
          </div>
          <div
            class="workspace-list-root"
          >
            <ul
              class="list-group"
            >
              <li
                class="list-group-item list-group-item-action list-group-item-flex"
              >
                <a
                  class="button-root workspace-link border-button btn btn-unstyled"
                  href="/workspace/124"
                >
                  <div
                    class="autofit-col autofit-col-expand"
                  >
                    <div
                      class="col-content-wrapper"
                    >
                      <div
                        class="text-truncate"
                      >
                        <div
                          class="workspace-name"
                        >
                          <span
                            class="text-truncate"
                            data-tooltip="false"
                            title=""
                          >
                            project124
                          </span>
                        </div>
                        <div
                          class="info-wrapper corporation-project-name"
                        >
                          corpProjectName124
                        </div>
                        <div
                          class="workspace-info"
                        >
                          Basic Plan
                        </div>
                      </div>
                      <svg
                        class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                        role="presentation"
                      >
                        <use
                          href="#angle-right-small"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </li>
              <li
                class="list-group-item list-group-item-action list-group-item-flex"
              >
                <a
                  class="button-root workspace-link border-button btn btn-unstyled"
                  href="/workspace/123"
                >
                  <div
                    class="autofit-col autofit-col-expand"
                  >
                    <div
                      class="col-content-wrapper"
                    >
                      <div
                        class="text-truncate"
                      >
                        <div
                          class="workspace-name"
                        >
                          <span
                            class="text-truncate"
                            data-tooltip="false"
                            title=""
                          >
                            project123
                          </span>
                        </div>
                        <div
                          class="info-wrapper corporation-project-name"
                        >
                          corpProjectName123
                        </div>
                        <div
                          class="workspace-info"
                        >
                          Business Plan
                        </div>
                      </div>
                      <svg
                        class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                        role="presentation"
                      >
                        <use
                          href="#angle-right-small"
                        />
                      </svg>
                    </div>
                  </div>
                </a>
              </li>
            </ul>
          </div>
          <div
            class="mt-4"
          >
            <a
              class="button-root btn btn-sm btn-secondary"
              href="/workspace/add/trial"
            >
              Start Free Trial
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
